Bug 113357 - Duplicate 'Formatted text [Richtext]' paste option
Summary: Duplicate 'Formatted text [Richtext]' paste option
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.4.2.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Paste
  Show dependency treegraph
 
Reported: 2017-10-22 19:53 UTC by OfficeUser
Modified: 2018-01-04 13:46 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (91.95 KB, image/png)
2017-10-22 19:55 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2017-10-22 19:53:02 UTC
If formatted text is available in the clipboard Calc, Draw and Impress always show "Formatted text [RTF]" and "Formatted text [Richtext]" as paste options. I have attached a screenshot.

While in Draw/Impress both paste options work - as far as I can judge this - with equal results Calc displays an error message "The contents of the clipboard could not be pasted." for the Richtext-option.


Writer only displays "Formatted text [RTF]". I think that is the way to go for all  other apps.
Comment 1 OfficeUser 2017-10-22 19:53:32 UTC
Version: 6.0.0.0.alpha0+
Build ID: a4a182e24d2e3e954831a0a7c70a7299f28950cb
Comment 2 OfficeUser 2017-10-22 19:55:46 UTC
Created attachment 137212 [details]
Screenshot
Comment 3 OfficeUser 2017-10-22 19:56:28 UTC
Screenshot from 6.0.0.0.alpha0+ build attached.
Comment 4 OfficeUser 2017-10-22 19:59:58 UTC
Not reproducible with:
Version: 5.0.0.5
Build ID: 437e4abdf9e72fd0a6e6f8697a0e659bc77f9b10

==> Added "regression" and "bibisectRequest" keywords.
Comment 5 OfficeUser 2017-10-22 20:13:39 UTC
Version: 5.0.0.5 only didplays "Formatted text [RTF]" for all aps.
Comment 6 Yousuf Philips (jay) (retired) 2017-10-23 12:55:06 UTC
Cant reproduce it in master or 5.4.1.2.
Version: 6.0.0.0.alpha1+
Build ID: d76c4e5c9aaf8bd27ec97679bcaeba5b18aca493
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group

Norbet: Please provide build details from the about page and the distribution you are running, and you shouldnt set your bugs to NEW.
Comment 7 raal 2017-10-24 15:30:38 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna  ; Could you possibly take a look at this one?
Thanks
 86d63b2db0771d58911614c4235b71e8c6bd0926 is the first bad commit
commit 86d63b2db0771d58911614c4235b71e8c6bd0926
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jan 26 04:43:30 2017 -0800

    source a6f3ca06100bc23eee5017d6cf53e89282dc580d
   
author    Oliver Specht <oliver.specht@cib.de>    2016-12-30 15:47:17 (GMT)
committer    Miklos Vajna <vmiklos@collabora.co.uk>    2017-01-26 12:01:21 (GMT)
commit    a6f3ca06100bc23eee5017d6cf53e89282dc580d (patch)
tree    aacf736ec60852bf8b72599e33afe479bc23d896
parent    5891a45fa08729ba01f78bece9312b2c01d3a214 (diff)
tdf#101828 handle rtf/richtext correctly
Comment 8 Miklos Vajna 2017-10-25 08:20:16 UTC
My primary preference would be if Oliver could look at this. Oliver?
Comment 9 Oliver Specht (CIB) 2017-10-25 18:31:00 UTC
The reason for the RTF/richtext change was a problem with a program that did it right in only accepting RTF as RTF.
All other programs work with richtext and misuse it as RTF.

To solve this LO now supports both but interprets both as RTF. 

Paste should in all application only show one of the two formats and prefer RTF.
Comment 10 Commit Notification 2018-01-03 16:45:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dba3cd508116780cf5d115f964b7311dd61e180d

tdf#113357 cui: fix duplicate 'Formatted text [Richtext]' paste option

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2018-01-04 13:46:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c19af3da928dee3287ba5dd83d32c1cdcbb1b49&h=libreoffice-6-0

tdf#113357 cui: fix duplicate 'Formatted text [Richtext]' paste option

It will be available in 6.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.