tdf#113357 cui: fix duplicate 'Formatted text [Richtext]' paste option

Prefer RTF when we have both RICHTEXT and RTF.

Change-Id: Ib4133ae4fdecc32429d89b56b0c9466dd3451522