cui/Module_cui.mk
@@ -26,4 +26,8 @@ $(eval $(call gb_Module_add_screenshot_targets,cui,\
     CppunitTest_cui_dialogs_test_4 \
 ))
 
+$(eval $(call gb_Module_add_uicheck_targets,cui,\
+    UITest_cui_dialogs \
+))
+
 # vim: set noet sw=4 ts=4:
